--- a/_plays/03.md
+++ b/_plays/03.md
@@ -1,22 +1,39 @@
 ---
 id: 3
-title: Make it simple and intuitive
+title: Develop the concept of operations
 ---
 
-Using a government service shouldn’t be stressful, confusing, or daunting. It’s our job to build services that are simple and intuitive enough that users succeed the first time, unaided.
+It is important to understand how users and stakeholders will interact with the IS&S Environment and by what means. The vision of how the Information Sharing and Safeguarding (IS&S) Environment will operate must be tied to how such a capability will directly improve the mission effectiveness of participating organizations, focused on the highest priority obstacles to improvement that the stakeholders see as impediments to progress. Think of the IS&S Environment as an information highway – the user organizations need a roadmap to identify on ramps, define the rules of the road for managing traffic interactions, and show the off ramps for delivering information.
 
 ### Checklist
-1. Use a simple and flexible design style guide for the service. Use the [U.S. Web Design Standards](https://playbook.cio.gov/designstandards) as a default 
-2. Use the design style guide consistently for related digital services
-3. Give users clear information about where they are in each step of the process
-4. Follow accessibility best practices to ensure all people can use the service
-5. Provide users with a way to exit and return later to complete the process
-6. Use language that is familiar to the user and easy to understand
-7. Use language and design consistently throughout the service, including online and offline touch points
+1. Understand the different points at which users will interact with the IS&S Environment.
+2. Put the identified cultural impediments on the table, discuss them, and determine ways to minimize the obstacles to building the IS&S Environment.
+3. Identify difficulties and obstacles in the current way users interact with the existing IS&S Environment or data sources, and prioritize these according to user needs.
+4. Identify the business requirements for the IS&S Environment.
+5. Define the highest priority information exchanges as a starting point for the IS&S Environment – the priorities should be based on meeting the greatest needs as expressed by the users.
+6. Document the as-is model of how these exchanges now get handled versus the to-be model of how the IS&S Environment will handle a more productive exchange of information.
+7. Identify the privacy and safeguarding constraints that must be met by any ultimate implementation of information sharing.
+8. Identify the roles of all the participants in the information exchanges to be clear about who initiates the exchange, who receives the information, and under what conditions the exchange takes place.
+9. Develop metrics that will measure how well the IS&S Environment is meeting business and user needs at each step of the service.
+10. Develop a change management process.
 
 ### Key Questions
-- What primary tasks are the user trying to accomplish?
-- Is the language as plain and universal as possible?
-- What languages is your service offered in?
-- If a user needs help while using the service, how do they go about getting it?
-- How does the service’s design visually relate to other government services?
+- What are the different ways (both online and offline) that people currently accomplish the task the IS&S Environment will be designed to help do more effectively?
+- Where are user difficulties and obstacles in the current way people accomplish the tasks?
+- What are the business requirements for the IS&S Environment?
+- What kind of exchanges will be supported by the IS&S Environment?
+- How is the exchange of information initiated and received?
+- How do individuals request information?
+- How will the request for information be fulfilled by the IS&S Environment?
+- What services will be involved in producing the information requested?
+- What are the technology considerations?
+- What are the funding constraints?
+- How we are going to manage and address risk?
+- How will privacy be protected and security assured through the information exchange processes?
+- What metrics will best indicate how well the service is working for its users?
+
+### Resources
+The following resources can help you with this play:
+- N-DEx: Understanding the National Data Exchange (N-DEx) System, Chief Mark A. Marshall, Smithfield (VA) PD, Vice President, International Association of Chiefs of Police, (https://www2.fbi.gov/hq/cjisd/ndex/ndex_understanding.htm
+- Comprehensive Regional Information System Project Volume 2: Concept of Operations (2007), Noblis (for the National Institute of Justice), https://www.ncjrs.gov/pdffiles1/nij/grants/219378.pdf
+- Information Sharing Environment Common Profile Framework Description,http://project-interoperability.github.io/common-profile/
