--- a/_plays/01.md
+++ b/_plays/01.md
@@ -30,6 +30,6 @@ We must begin Information Sharing and Safeguarding (IS&S) Environment projects b
 
 ### Resources
 The following resources can help you with this play:
-- Pre-RFP Toolkit (v3-2013), IJIS Institute, [**http://www.ijis.org/?page=PreRFP_Toolkit**](http://www.ijis.org/?page=PreRFP_Toolkit "Link to PreRFP Toolkit")
-- American Probation and Parole Association (APPA) Community Corrections Automated Case Management Procurement Guide with Bid Specifications, Matz, A. K. (2012), APPA and Council of State Governments, [**https://www.appa-net.org/eweb/docs/APPA/pubs/Procurement-Guide.pdf**](https://www.appa-net.org/eweb/docs/APPA/pubs/Procurement-Guide.pdf "Link to APPA") 
+- Pre-RFP Toolkit (v3-2013), IJIS Institute, http://www.ijis.org/?page=PreRFP_Toolkit
+- American Probation and Parole Association (APPA) Community Corrections Automated Case Management Procurement Guide with Bid Specifications, Matz, A. K. (2012), APPA and Council of State Governments, https://www.appa-net.org/eweb/docs/APPA/pubs/Procurement-Guide.pdf
 
