--- a/_plays/02.md
+++ b/_plays/02.md
@@ -27,9 +27,8 @@ Putting in place a governance process where all stakeholders believe they are re
 - Do committees understand their responsibilities and deliverables?
 - What policy implications need to be addressed?
 
-### Play Resources
+### Resources
 The following resources can help you with this play:
-
 - Illinois Framework for Healthcare and Human Resources Interoperability and Governance Resources, http://illinoisframework.org/illinois-framework-resource-library
 - The Good Governance Standard for Public Services (2004), The Independent Commission on Good Governance in Public Services, http://illinoisframework.org/pdf/Good_Governance_Standards_for_Public_Services.pdf
 - Governance Documentation: Article, Bylaws, and Policies (2012), BoardSource, http://illinoisframework.org/pdf/BoardSource_Governance_Documentation.pdf
