--- a/_plays/04.md
+++ b/_plays/04.md
@@ -1,29 +1,27 @@
 ---
 id: 4
-title: Build the service using agile and iterative practices
+title:  Identify and get support from critical sponsors
 ---
 
-We should use an incremental, fast-paced style of software development to reduce the risk of failure. We want to get working software into users’ hands as early as possible to give the design and development team opportunities to adjust based on user feedback about the service. A critical capability is being able to automatically test and deploy the service so that new features can be added often and be put into production easily.
+Obtaining support, resources, and funding to enable different capabilities in the IS&S Environment is one of the most significant obstacles to overcome, especially in tight fiscal times. It is important to identify the critical sponsors who support the IS&S Environment’s mission-critical endeavor and are willing to help fund the project to showcase the value. It is helpful to engage these key sponsors in a collaborative process to develop a funding strategy built on a strong and well-defined business case that demonstrates the mission problem an IS&S Environment will solve.
 
 ### Checklist
-1. Ship a functioning “minimum viable product” (MVP) that solves a core user need as soon as possible, no longer than three months from the beginning of the project, using a “beta” or “test” period if needed
-2. Run usability tests frequently to see how well the service works and identify improvements that should be made
-3. Ensure the individuals building the service communicate closely using techniques such as launch meetings, war rooms, daily standups, and team chat tools
-4. Keep delivery teams small and focused; limit organizational layers that separate these teams from the business owners
-5. Release features and improvements multiple times each month
-6. Create a prioritized list of features and bugs, also known as the “feature backlog” and “bug backlog”
-7. Use a source code version control system
-8. Give the entire project team access to the issue tracker and version control system
-9. Use code reviews to ensure quality
-
+1. Getting sponsors starts with identifying user groups or organizations that care about the problem of information sharing and believe the IS&S Environment is an important step in solving problems.
+2. Gather small groups of people who are stakeholders or who care about improving information sharing in order to prevent harm or promote resiliency.
+3. Seek start-up investments to get the concept moving.
+4. Funding for a complete IS&S Environment is rare, and teams should always consider scalability and sustainability. Develop a funding plan that doesn’t rely on one-time, up-front, complete funding.
+5. Have a phased funding plan to share with potential sponsors.
 
 ### Key Questions
-- How long did it take to ship the MVP? If it hasn't shipped yet, when will it?
-- How long does it take for a production deployment?
-- How many days or weeks are in each iteration/sprint?
-- Which version control system is being used?
-- How are bugs tracked and tickets issued? What tool is used?
-- How is the feature backlog managed? What tool is used?
-- How often do you review and reprioritize the feature and bug backlog?
-- How do you collect user feedback during development? How is that feedback used to improve the service?
-- At each stage of usability testing, which gaps were identified in addressing user needs?
+- Have you accurately identified potential stakeholders and defined the role of each stakeholder organization?
+- Are there individuals in stakeholder organizations who are passionate about the need for information sharing and might wish to help find sponsors?
+- What will it cost to get the project off the ground and start something that people can rally around to finish?
+- Have you developed an approach for critical sponsor support that clearly defines the return on investment?
+- How will you document critical sponsor support commitments (e.g., memoranda of understanding)?
+- Who are the stakeholders that might step up to become sponsors?
+
+### Resources
+The following resources can help you with this play:
+- Funding Sources and Programs, Bureau of Justice Assistance-Justice Information Sharing, https://it.ojp.gov/implementation/funding/sources  
+- Multi-agency Working and Information Sharing Project (2013),  United Kingdom Home Office, https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/225012/MASH_Product.pdf
+- Funding Awarded for Enhancing Public Safety through Justice Information Sharing Implementation, http://www.ncja.org/advancing-criminal-JIS-TTA/jis-funding-award-announcement
