--- a/_plays/06.md
+++ b/_plays/06.md
@@ -1,18 +1,36 @@
 ---
 id: 6
-title: Assign one leader and hold that person accountable
+title: Identify relevant standards
 ---
 
-There must be a single product owner who has the authority and responsibility to assign tasks and work elements; make business, product, and technical decisions; and be accountable for the success or failure of the overall service. This product owner is ultimately responsible for how well the service meets needs of its users, which is how a service should be evaluated. The product owner is responsible for ensuring that features are built and managing the feature and bug backlogs.
+Early in the process, jump start the project by identifying applicable Information Sharing and Safeguarding (IS&S) standards. Leverage the great strides made over the last decade by adopting these polished IS&S products that have been shaped by user experience. IS&S standards were created to provide a common approach to sharing electronic information among tribal, territorial, local, state, and Federal organizations. Standards help define business processes, provide a common framework, platform, and language to exchange information, and assist with security and privacy. The governance body must be actively engaged in the identification and the application of these standards especially in the context of the policy including privacy concerns.
 
 ### Checklist
-1. A product owner has been identified
-2. All stakeholders agree that the product owner has the authority to assign tasks and make decisions about features and technical implementation details
-3. The product owner has a product management background with technical experience to assess alternatives and weigh tradeoffs
-4. The product owner has a work plan that includes budget estimates and identifies funding sources
-5. The product owner has a strong relationship with the contracting officer
+1. Cast a wide net when considering information sharing and safeguarding standards, including national and international standards that contribute to project success.
+2. Standards are the lifeblood of information sharing and safeguarding efforts and must be used where applicable. If standards are not an immediate option, consider how they may impact the IS&S Environment over the complete lifecycle.
+3. Whenever possible, seek training opportunities to become more familiar with existing standards and their application.
+4. Define a specific list of standards that will become the basis of the project (e.g., NIEM, security, privacy, and geospatial standards).
+5. Acquire training for developers in the application of standards in building out an IS&S Environment.
+6. Ensure that the governance body and participating agencies are committed to the use of standards.
 
 ### Key Questions
-- Who is the product owner?
-- What organizational changes have been made to ensure the product owner has sufficient authority over and support for the project?
-- What does it take for the product owner to add or remove a feature from the service?
+- What standards will be most helpful in expediting information exchanges in less time for development and implementation?
+- What standards will be applied to ensure privacy and security in the IS&S Environment?
+- What expertise is required of the development team to ensure that the standards are appropriately included in the solution designs?
+
+### Resources
+The following resources can help you with this play:
+- National Information Exchange Model (NIEM), http://www.niem.gov
+- Global Information Sharing Toolkit, Bureau of Justice Assistance-Justice Information Sharing, https://it.ojp.gov/about-gist
+- OASIS (a nonprofit consortium that drives the development, convergence and adoption of open standards for the global information society), https://www.oasis-open.org/
+- Open Geospatial Consortium (OGC) Standards, http://www.opengeospatial.org/standards
+Object Management Group, http://www.omg.org/
+- National Institute of Standards and Technology (NIST), http://www.nist.gov/
+- International Organization for Standardization (ISO), http://www.iso.org/iso/home/standards.htm
+- Information Exchange Package Documentation (IEPD) Clearinghouse (IEPDs that have been submitted by individuals and organizations who have implemented the Global Justice XML Data Model and the National Information Exchange Model), http://iepd.custhelp.com/
+- Open Standards and Standards Projects, Standards Coordinating Council, http://www.standardscoordination.org/standards
+- Information Sharing Environment (ISE) Information Interoperability Framework (I2F), http://ise.gov/sites/default/files/FINAL%20-%20ISE_I2F_v0%205.pdf
+- Data Aggregation Reference Architecture (DARA), http://www.standardscoordination.org/sites/default/files/docs/DARA_v1.pdf
+- Geospatial Interoperability Reference Architecture (GIRA), http://ise.gov/sites/default/files/GIRA.pdf
+- Structured Threat Information eXpression (STIX), https://stixproject.github.io/
+- Trusted Automated eXchange of Indicator Information (TAXII), https://taxiiproject.github.io 
