--- a/_plays/07.md
+++ b/_plays/07.md
@@ -1,16 +1,30 @@
 ---
 id: 7
-title: Bring in experienced teams
+title: Put together the implementation team
 ---
 
-We need talented people working in government who have experience creating modern digital services. This includes bringing in seasoned product managers, engineers, and designers. When outside help is needed, our teams should work with contracting officers who understand how to evaluate third-party technical competency so our teams can be paired with contractors who are good at both building and delivering effective digital services. The makeup and experience requirements of the team will vary depending on the scope of the project.
+Building an Information Sharing and Safeguarding (IS&S) Environment is a team effort. Sponsoring organizations have to assemble a team of strong players who can handle all of the disparate tasks involved. A single project manager (PM) is essential, with the authority to make critical decisions on behalf of the governance body. The PM should have experience and training in project management skills in addition to familiarity with the operational objectives of the IS&S Environment and will be ultimately responsible for how well it meets the needs of its users. The PM is responsible for ensuring that required features are developed, the timeline is being managed as expected, and all issue logs and bugs are addressed appropriately. Other key team members will handle subtasks such as training, implementation, procurement, legal, and technology and other tasks. The build or buy decisions will be made in this play, and plans will be developed for the acquisition of in-house talent or contractor services to ensure that all facets of building the IS&S Environment are being handled by experienced and knowledgeable team players. Contracting officers must understand how to evaluate third-party technical competency so in-house teams can be paired with contractors who are good at both building and delivering effective IS&S Environment capabilities. A procurement strategy in keeping with applicable regulatory provisions is essential. Ways to accelerate and establish agility in procurement actions are applicable at this point.
 
 ### Checklist
-1. Member(s) of the team have experience building popular, high-traffic digital services
-2. Member(s) of the team have experience designing mobile and web applications
-3. Member(s) of the team have experience using automated testing frameworks
-4. Member(s) of the team have experience with modern development and operations (DevOps) techniques like continuous integration and continuous deployment
-5. Member(s) of the team have experience securing digital services
-6. A Federal contracting officer is on the internal team if a third party will be used for development work
-7. A Federal budget officer is on the internal team or is a partner
-8. The appropriate privacy, civil liberties, and/or legal advisor for the department or agency is a partner
+1. Identify a PM that has a product management background with technical experience to assess alternatives and weigh tradeoffs.
+2. All stakeholders agree that the PM has the authority to assign tasks and make decisions about features and technical implementation details.
+3. The PM has a strong relationship with the contracting officer.
+4. Implementation is multi-disciplinary – it is essential to have communication across the team and the ability of the team to reach back to the users for feedback where necessary.
+5. Member(s) of the team have experience building mission-critical, high-traffic digital services.
+6. Member(s) of the team have experience designing applications to meet identified requirements (web, mobile, cloud).
+7. Member(s) of the team have experience using automated testing frameworks.
+8. Member(s) of the team have experience with modern development and operations (DevOps) techniques like continuous integration and continuous deployment.
+9. Members of the team have understanding and experience in implementing open standards-based solutions.
+10. A contracting officer is on the internal team if a third party will be used for development work.
+11. A budget officer is on the internal team or is a partner.
+12. The appropriate privacy, civil liberties, and/or legal advisor for the department or agency is a partner.
+
+### Key Questions
+- What organizational changes have been made to ensure the PM has sufficient authority over and support for the project?
+- What does it take for the PM to add or remove an IS&S Environment feature/capability?
+- What technical skills are available in-house and what skills are missing?
+- What are the options for getting missing skills? (e.g., acquisitions, training)
+
+### Resources
+The following resources can help you with this play:
+- Check back soon for additional resources! Have ideas for resources for this play? Email us at info@standardscoordination.org. 
