--- a/_plays/09.md
+++ b/_plays/09.md
@@ -1,30 +1,35 @@
 ---
 id: 9
-title: Deploy in a flexible hosting environment
+title: Manage implementation
 ---
 
-Our services should be deployed on flexible infrastructure, where resources can be provisioned in real-time to meet spikes traffic and user demand. Our digital services are crippled when we host them in data centers that market themselves as “cloud hosting” but require us to manage and maintain hardware directly. This outdated practice wastes time, weakens our disaster recovery plans, and results in significantly higher costs.
+A milestone-based development plan with short-term measurement of progress and periodic revisiting of objectives related to the end game is essential to eventual success. Today’s advanced methodologies call for iterative development and constant user feedback. Close collaboration between technologists and practitioners using methodologies, such as Agile, as a way to shorten development and implementation time, can bolster project success. This incremental, fast-paced style of software development helps reduce the risk of failure and gets working software into users’ hands as early as possible to give the design and development team opportunities to adjust based on user feedback about the service. Breaking down the total Information Sharing and Safeguarding (IS&S) Environment development into subtasks so that each can be monitored and explained to management and the governance body is an important contribution to the likelihood of overall success.
 
 ### Checklist
-1. Resources are provisioned on demand
-2. Resources scale based on real-time user demand
-3. Resources are provisioned through an API
-4. Resources are available in multiple regions
-5. We only pay for resources we use
-6. Static assets are served through a content delivery network
-7. Application is hosted on commodity hardware
+1. A critical capability is being able to automatically test and deploy the service so that new features can be added often and be put into production easily.
+2. Ensure the individuals building the services communicate closely using techniques such as launch meetings, war rooms, daily standups, and team chat tools.
+3. Hold discussion sessions with stakeholders to help them understand why identified cultural obstacles should not stand in the way of implementation.
+4. Keep delivery teams small and focused; limit organizational layers that separate these teams from the business owners.
+5. Release features and improvements multiple times each month.
+6. Create a prioritized list of features and bugs, also known as the feature backlog and bug backlog.
+7. Use a source code version control system.
+8. Give the entire project team access to the issue tracker and version control system.
+9. Use code reviews to ensure quality.
 
 ### Key Questions
--	Where is your service hosted?
--	What hardware does your service use to run?
--	What is the demand or usage pattern for your service?
--	What happens to your service when it experiences a surge in traffic or load?
--	How much capacity is available in your hosting environment?
--	How long does it take you to provision a new resource, like an application server?
--	How have you designed your service to scale based on demand?
--	How are you paying for your hosting infrastructure (e.g., by the minute, hourly, daily, monthly, fixed)?
--	Is your service hosted in multiple regions, availability zones, or data centers?
--	In the event of a catastrophic disaster to a datacenter, how long will it take to have the service operational?
--	What would be the impact of a prolonged downtime window?
--	What data redundancy do you have built into the system, and what would be the impact of a catastrophic data loss?
--	How often do you need to contact a person from your hosting provider to get resources or to fix an issue?
+- Do you have a project plan?
+- How long it is each stage of deployment expected to take before a move to production deployment? 
+- What is the estimated timeline for a go-live move to production?
+- How many days or weeks are in each iteration/sprint?
+- How are you going to share the status on regular basis among the project team and the project sponsors?
+- Which version control system is being used?
+- How are bugs tracked and tickets issued? What tool is used?
+- How is the feature backlog managed? What tool is used?
+- How often do you review and reprioritize the feature and bug backlog?
+- How do you collect user feedback during development? How is that feedback used to improve the service?
+
+###Resources
+The following resources can help you with this play:
+- Project Management Resources, Project Management Institute (PMI), http://www.pmi.org/
+ -IS&S System Development Life Cycle (SDLC) Methodologies
+- Manifesto for Agile Software Development, http://www.agilemanifesto.org
