--- a/_plays/10.md
+++ b/_plays/10.md
@@ -1,26 +1,29 @@
 ---
 id: 10
-title: Automate testing and deployments
+title: Automate testing and demonstrate success
 ---
 
-Today, developers write automated scripts that can verify thousands of scenarios in minutes and then deploy updated code into production environments multiple times a day. They use automated performance tests which simulate surges in traffic to identify performance bottlenecks. While manual tests and quality assurance are still necessary, automated tests provide consistent and reliable protection against unintentional regressions, and make it possible for developers to confidently release frequent updates to the service.
+Today, government agencies, solution providers, and open standards organizations are developing standards and solutions that automate testing that verifies conformance to standards. Testing for code development can be done in-house but testing for conformance to the standards can be very challenging because the standards don’t come with the detailed conformance criteria or how-to adoption guidance. Demonstrating conformance to the implemented standards is as important, and while manual tests and quality assurance are still necessary, automated tests provide consistent and reliable protection against unintentional regressions, and make it possible for developers to confidently release frequent updates.
 
 ### Checklist
-1. Create automated tests that verify all user-facing functionality
-2. Create unit and integration tests to verify modules and components
-3. Run tests automatically as part of the build process
-4. Perform deployments automatically with deployment scripts, continuous delivery services, or similar techniques
-5. Conduct load and performance tests at regular intervals, including before public launch
-
+1. Run usability tests frequently to see how well the IS&S Environment components works and identify improvements that should be made.
+2. Conduct a pilot test of the use of the product in a scenario bearing resemblance to the original scenario (use case). This is sometimes called an alpha test of the product and must be realistic and result in actual implementation even if temporary. Evaluate results of the pilot.
+3. Conduct a replication test where 3-5 other organizations not participating in the original development actually implement the product and test it in the real world. Evaluate the results of the replication process.
+4. In parallel with the testing processes, prepare a documentation plan and package that includes release notes, user documentation, marketing collateral, and promotional materials such as video testimony.
+5. If possible, work with software providers whose software products are certified to be in conformance with the standards adopted for the project.
+6. Insist on the creation of a capability to automate software testing to allow for frequent retesting under load conditions to show conformance.
+7. Require service providers to certify their products using the IJIS Institute Springboard Certification Program.
 
 ### Key Questions
-- What percentage of the code base is covered by automated tests?
-- How long does it take to build, test, and deploy a typical bug fix?
-- How long does it take to build, test, and deploy a new feature into production?
-- How frequently are builds created?
-- What test tools are used?
-- Which deployment automation or continuous integration tools are used?
-- What is the estimated maximum number of concurrent users who will want to use the system?
-- How many simultaneous users could the system handle, according to the most recent capacity test?
-- How does the service perform when you exceed the expected target usage volume? Does it degrade gracefully or catastrophically?
-- What is your scaling strategy when demand increases suddenly?
+- At each stage of usability testing, which gaps were identified in addressing user needs?
+- Has the software proposed been certified to conform to selected standards?
+- What tools are available for automating software testing?
+- What software product certifications does the software provider maintain for the proposed products?
+- Has the software provider employed automated testing in the past and what were the results?
+
+###Resources
+The following resources can help you with this play:
+- Compliance Testing and Certification Programs such as: Springboard Certification Program, http://www.ijis.org/?page=Springboard and Open Geospatial Consortium (OGC) Compliance Testing and Certification, http://www.opengeospatial.org/compliance
+- Information Sharing Environment (ISE) Information Interoperability Framework (I2F), http://ise.gov/sites/default/files/FINAL%20-%20ISE_I2F_v0%205.pdf
+-Data Aggregation Reference Architecture (DARA), http://www.standardscoordination.org/sites/default/files/docs/DARA_v1.pdf
+- Geospatial Interoperability Reference Architecture (GIRA), http://ise.gov/sites/default/files/GIRA.pdf
