--- a/_plays/11.md
+++ b/_plays/11.md
@@ -1,24 +1,31 @@
 ---
 id: 11
-title: Manage security and privacy through reusable processes
+title: Go live!
 ---
 
-Our digital services have to protect sensitive information and keep systems secure. This is typically a process of continuous review and improvement which should be built into the development and maintenance of the service. At the start of designing a new service or feature, the team lead should engage the appropriate privacy, security, and legal officer(s) to discuss the type of information collected, how it should be secured, how long it is kept, and how it may be used and shared. The sustained engagement of a privacy specialist helps ensure that personal data is properly managed. In addition, a key process to building a secure service is comprehensively testing and certifying the components in each layer of the technology stack for security vulnerabilities, and then to re-use these same pre-certified components for multiple services.
-
-The following checklist provides a starting point, but teams should work closely with their privacy specialist and security engineer to meet the needs of the specific service.
+After the development and testing are done, it is time to go live. The Information Sharing and Safeguarding (IS&S) Environment should be deployed on flexible infrastructure, where resources can be provisioned in real time to meet identified user requirements and user demand. Going live is more than simply flipping the on switch – it involves user acceptance testing as a proof point for identified user requirements, organizing all the stakeholders for the transition, and training users on the new IS&S Environment.
 
 ### Checklist
-1. Contact the appropriate privacy or legal officer of the department or agency to determine whether a System of Records Notice (SORN), Privacy Impact Assessment, or other review should be conducted
-2. Determine, in consultation with a records officer, what data is collected and why, how it is used or shared, how it is stored and secured, and how long it is kept
-3. Determine, in consultation with a privacy specialist, whether and how users are notified about how personal information is collected and used, including whether a privacy policy is needed and where it should appear, and how users will be notified in the event of a security breach
-4. Consider whether the user should be able to access, delete, or remove their information from the service
-5. “Pre-certify” the hosting infrastructure used for the project using FedRAMP
-6. Use deployment scripts to ensure configuration of production environment remains consistent and controllable
+1. User acceptance testing on live systems should be correlated with previously-identified requirements and documented.
+2. Identify training requirements for different categories of users and develop a plan for providing training during the go live period and into the future as staff changes occur.
+3. Ensure the availability of user help resources.
+4. It helps to have an assigned person from a solution provider so you don’t have to educate a new person each time on what is happening and what should or should not be occurring.
+5. Consider the continuity of operations plan and the relationship to the new IS&S Environment.
+6. Develop the processes for the collection, documentation, and dissemination of performance measures.
+7. Evaluate the need for subsequent releases and prepare the follow-up release plan and structure.
 
 ### Key Questions
-- Does the service collect personal information from the user?  How is the user notified of this collection?
-- Does it collect more information than necessary? Could the data be used in ways an average user wouldn't expect?
-- How does a user access, correct, delete, or remove personal information?
-- Will any of the personal information stored in the system be shared with other services, people, or partners?
-- How and how often is the service tested for security vulnerabilities?
-- How can someone from the public report a security issue?
+- What data redundancy do you have built into the system, and what would be the impact of a catastrophic data loss?
+- How often do you need to contact a person from your provider to get resources or to fix an issue?
+- Is there a triage plan if patches or fixes are needed to ensure the more critical fixes are addressed immediately and less critical fixes are appropriately schedule?
+- What are the different types of IS&S Environment users? What training will they need to use the IS&S Environment to achieve stated goals?
+- Does your IS&S Environment involve data that is open to the public? How will you communicate this availability to the public and educate them on the use of the interface?
+- Do the various groups of users know how to get help when using the IS&S Environment?
+- Have you developed the test scripts for user acceptance testing?
+- Have you identified the test group?
+- How are you collecting user feedback for bugs and issues?
+
+### Resources
+The following resources can help you with this play:
+- Check back soon for additional resources! 
+Have ideas for resources for this play? Email us at info@standardscoordination.org. 
